k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cvp_rust
spec:
  selector:
    app.kubernetes.io/name: cvp_rust_api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
